--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
                     </a>
                     <a href="javascript:void(0);" class="slider__item">
                         <div class="decrtiption">
-                            <span class="decrtiption__text_main">В какое время возможен самовывоз В какое<br/> время возможен
+                            <span class="decrtiption__text_main">В какое время возможен самовывоз В какое<br /> время
+                                возможен
                                 самовывоз?</span>
                             <span class="decrtiption__text_second">Карта лояльности с вашим </span>
                         </div>
@@ -254,7 +255,8 @@
                 <div class="reference-block__item">
                     <div class="decrtiption">
                         <span class="decrtiption__text_main">Способы доставки и самовывоза</span>
-                        <span class="decrtiption__text_second">Это карта лояльности с вашим номером покупат Это карта<br/>лояльности с вашим номером покупат</span>
+                        <span class="decrtiption__text_second">Это карта лояльности с вашим номером покупат Это
+                            карта<br />лояльности с вашим номером покупат</span>
                     </div>
                     <a href="javascript:void(0);" class="reference-block__link">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -295,7 +297,8 @@
                 <div class="reference-block__item">
                     <div class="decrtiption">
                         <span class="decrtiption__text_main">Лёгкий возврат</span>
-                        <span class="decrtiption__text_second">Это карта лояльности с вашим номером покупат Это карта<br/> лояльности с вашим номером покупат</span>
+                        <span class="decrtiption__text_second">Это карта лояльности с вашим номером покупат Это
+                            карта<br /> лояльности с вашим номером покупат</span>
                     </div>
                     <a href="javascript:void(0);" class="reference-block__link">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
